ChangeLog:

nxagent-3.1.0-6

- Fixed a compile warning in Args.c.

- The synchronization loop breaks if the drawable is clean when it's
  not supposed to be.

- Fixed TR12E01966. Emacs tooltips were not displayed properly. Added
  a check on the event mask before calling miWindowExposures().

- Fixed TR01F01982. ConfigureNotify warning is printed in verbose mode
  only.

nxagent-3.1.0-5

- Moved some variable definitions placed in ProcGetProperty().

nxagent-3.1.0-4

- Fixed TR06D01397. The problem was: drag & drop operations between
  windows of Java applications didn't work in NX Client for Windows.

- Implemented FR12E01957. Added a limit to the amount of data that can
  be pasted from an NX session into an external application. The new
  option - named 'copysize' - can be read from the 'options' file.

nxagent-3.1.0-3

- Fixed TR12E01963. The window tree is revalidated explicitly after
  recomputing the root window clip regions.

nxagent-3.1.0-2

- Fixed TR11E01946. Forcing exposures on regions saved in the backing
  store could bring to unexpected results.

- Fixed TR11E01928. Animated cursors were not properly disconnected
  and reconnected.

nxagent-3.1.0-1

- Opened the 3.1.0 branch based on nxagent-3.0.0-93.

nxagent-3.0.0-93

- Fixed TR10E01913. Now bell settings are restored after the agent
  reconnects.

nxagent-3.0.0-92

- Fixed a compilation error on 64 bit platforms.

nxagent-3.0.0-91

- Checked the window synchronization status before subtracting an ex-
  posed area from the corrupted region.

nxagent-3.0.0-90

- Fixed TR11E01932. In case of rootless session displayed by NXWin X
  server, synthetic ConfigureNotify events are generated by the X11
  agent. This helps to correct menu navigation in Java 1.6.0.

- Fixed the handling of 'client' parameter.

- Fixed bad refreshes in viewport navigation in the case of Windows
  client.

- Fixed TR11E01930. If the defer level is set by means of the command